News
====

1.1.0
-----

*Release date: ??-2010*

- bb #1: Deprecate applib.base.Locations and applib.locations in favour 'appdirs'
- bb #3: sh.unpack now ensures single top-level directory
- bb #4: Stop using `unicode` (py3k); applib now depends on the `six` package

1.0.1
-----

*Release date: 23-July-2010*

- applib.log: support for specifying the default verbosity level

1.0.0
-----

*Release date: 29-Jun-2010*

- bb #1: Broken pipe error when breaking `less` 

1.0.0c10
--------

*Release date: 27-May-2010*

- More Python3 related fixes

1.0.0c9
-------

*Release date: 25-May-2010*

- Fixed ``UnboundLocalError`` with 'sys' in _cmdln.py#L1190

1.0.0c8
-------

*Release date: 28-Apr-2010*

- Fixed ``sys.exc_info`` related Python3 port

1.0.0c7
-------

*Release date: 28-Apr-2010*

- Updated applib._cmdln with cmdln:^/branches/cfg

1.0.0c6
-------

*Release date: 28-Apr-2010*

- Fixed more modules supporting Python 3

1.0.0c5
-------

*Release date: 28-Apr-2010*

- Python 3 support

1.0.0c4
-------

*Release date: 13-Apr-2010*

- Fix a NameError with _proc.RunTimedout 


1.0.0c3
-------

*Release date: 30-Mar-2010*

- Fix: require_option was throwing Exception with empty message

1.0.0c2
-------

*Release date: 19-Mar-2010*

- Add applib.textui:askyesno

