@@ -9,6 +9,7 @@ News
 - bb #1: Deprecate applib.base.Locations and applib.locations in favour 'appdirs'
 - bb #3: sh.unpack now ensures single top-level directory
 - bb #4: Stop using `unicode` (py3k); applib now depends on the `six` package
+- #1: Stop using `raw_input` (py3k)
 
 1.0.1
 -----
